<?xml version="1.0"?>
<package>
  <name>kitti_tracking_player</name>
  <version>1.0.2</version>
  <description>
	This node aims to play the kitti tracking to ROS
  </description>

  <maintainer email="zhanghm_1995@qq.com">Haiming Zhang</maintainer>

  <license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>message_filters</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>   
	<build_depend>pcl_ros</build_depend>
    
  	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>message_filters</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>   
	<run_depend>pcl_ros</run_depend>

</package>
